add-on/Istio/istio-s0-virtual-service.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: s0
spec:
  hosts:
  - "*"
  gateways:
  - gateway
  http:
  - match:
    - uri:
        prefix: /s0
    rewrite:
      uri: "/api/v1"
    route:
    - destination:
        port:
          number: 80
        host: s0
